@@ -89,13 +89,29 @@ dependencies {
 
     // Tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
     testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
 }
 
+def jvmTmpDir = layout.buildDirectory.dir('tmp/jvm')
+
+tasks.withType(JavaExec).configureEach {
+    doFirst {
+        jvmTmpDir.get().asFile.mkdirs()
+    }
+    systemProperty 'java.io.tmpdir', jvmTmpDir.get().asFile.absolutePath
+}
+
 tasks.named('test') {
     useJUnitPlatform()
+
+    doFirst {
+        jvmTmpDir.get().asFile.mkdirs()
+    }
+    systemProperty 'java.io.tmpdir', jvmTmpDir.get().asFile.absolutePath
+    jvmArgs '-Djdk.attach.allowAttachSelf=true'
 }
 
 flyway {
